fix(automation): resolve locators, config reader, and sync issues across pages and tests